--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -47,6 +47,7 @@
     <Compile Include="LanguageEnum.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Texts.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
