--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -45,9 +45,11 @@
     <Compile Include="EditionBase.cs" />
     <Compile Include="IEdition.cs" />
     <Compile Include="LanguageEnum.cs" />
+    <Compile Include="LanguageText.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Texts.cs" />
+    <Compile Include="Validation.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
